<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showActivity">
    <TextView
        android:id="@+id/ma_tv_comment"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Comment:"
        android:textAlignment="viewStart"
        android:textColor="#3949AB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_heart" />

    <EditText
        android:id="@+id/sa_et_rate"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="54"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/ma_tv_systolic"
        app:layout_constraintTop_toBottomOf="@+id/sa_et_diatolic" />

    <TextView
        android:id="@+id/ma_tv_heart"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Heart Rate:"
        android:textAlignment="viewStart"
        android:textColor="#3949AB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_diastolic" />

    <EditText
        android:id="@+id/sa_et_diatolic"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="150"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/ma_tv_systolic"
        app:layout_constraintTop_toBottomOf="@+id/sa_et_systolic" />

    <TextView
        android:id="@+id/ma_tv_diastolic"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Diastolic Pressure: "
        android:textAlignment="viewStart"
        android:textColor="#3949AB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_systolic" />

    <EditText
        android:id="@+id/sa_time"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="hh:mm"
        android:inputType="time"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sa_date"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="dd/mm/yyyy"
        android:inputType="date"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ma_tv_systolic"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="Systolic Pressure: "
        android:textAlignment="viewStart"
        android:textColor="#3949AB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sa_time" />

    <EditText
        android:id="@+id/sa_et_systolic"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="135"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/ma_tv_systolic"
        app:layout_constraintTop_toBottomOf="@+id/sa_date" />

    <EditText
        android:id="@+id/sa_et_comment"
        android:layout_width="405dp"
        android:layout_height="54dp"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="70dp"

        android:text="Edit"

        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"

        android:text="Delete"

        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/sa_notEditable"
        android:layout_width="410dp"
        android:layout_height="449dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
