<resources>
    <string name="app_name">Cardiac-Recorder</string>
</resources>