<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_button"
        android:title="Item"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        />
</menu>